microservices-project/infrastructure/kubernetes/ingress/traefik-ingress-class.yaml
# infrastructure/kubernetes/ingress/traefik-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: traefik
spec:
    controller: traefik.io/ingress-controller
